[package]
name = "raft-kv"
description = "A distributed key/value store."
version = "0.1.0"
edition = "2021"
authors = ["Andrew Halle <me@andrewhalle.dev>"]

[dependencies]
anyhow = "1.0.69"
axum = "0.6.6"
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
prost = "0.11.9"
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.9.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.9.1"
